Fix timestamp tooltips not aligning correctly with timestamps

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1044,6 +1044,7 @@ kbd {
 	word-wrap: break-word;
 	word-break: break-word; /* Webkit-specific */
 	display: flex;
+	align-items: flex-start;
 	overflow: hidden;
 	position: relative;
 }
